# conta-comigo

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .mcp.json  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: categories.py  fixed_costs.py  forecast.py  imports.py  individual_payments.py  transactions.py
backend/app/core/: auth.py  config.py  supabase.py
backend/app/models/: schemas.py
backend/app/services/: categorization.py  csv_parser.py
backend/tests/: test_csv_parser.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: CategoriesPage.tsx  DashboardPage.tsx  FixedCostsPage.tsx  ImportPage.tsx  IndividualPaymentsPage.tsx  LoginPage.tsx  TransactionsPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
supabase/migrations/: 001_initial_schema.sql  002_fixed_costs.sql  003_user_category_rules.sql  004_bill_month.sql  005_individual_payments.sql
